<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.matrix.vector.activity.RoomActivity">

    <item
        android:id="@+id/ic_action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_download"
        android:icon="@drawable/ic_file_download_white"
        android:title="@string/download"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_tag"
        android:icon="@drawable/ic_tag_24px"
        android:title="@string/tag"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_forward"
        android:icon="@drawable/ic_material_forward"
        android:title="@string/forward"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_delete"
        android:icon="@drawable/ic_material_delete_white"
        android:title="@string/delete"
        app:showAsAction="always" />


</menu>
