<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                style="@style/ListHeader"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Header" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextStyle"
                android:id="@+id/categoryLayout"
                android:layout_marginTop="@dimen/layout_vertical_margin_half"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_horizontal_margin"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:hint="@string/category"
                android:textColorHint="?attr/vctr_default_text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/categoryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/vctr_message_text_color"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextStyle"
                android:id="@+id/organisationLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_horizontal_margin"
                android:layout_marginTop="@dimen/layout_vertical_margin_half"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:hint="@string/organisation_unit"
                android:textColorHint="?attr/vctr_default_text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/organisationEditText"
                    android:layout_width="match_parent"
                    android:textColor="?attr/vctr_message_text_color"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextStyle"
                android:id="@+id/specialityLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_horizontal_margin"
                android:layout_marginTop="@dimen/layout_vertical_margin_half"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:hint="@string/speciality"
                android:textColorHint="?attr/vctr_default_text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/organisationLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/specialityEditText"
                    android:textColor="?attr/vctr_message_text_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextStyle"
                android:id="@+id/locationLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_horizontal_margin"
                android:layout_marginTop="@dimen/layout_vertical_margin_half"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:hint="@string/location"
                android:textColorHint="?attr/vctr_default_text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialityLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationEditText"
                    android:layout_width="match_parent"
                    android:textColor="?attr/vctr_message_text_color"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:layout_marginRight="@dimen/layout_horizontal_margin"
                android:text="@string/apply"
                app:layout_constraintRight_toLeftOf="@+id/cancelButton"
                app:layout_constraintTop_toBottomOf="@+id/locationLayout" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_vertical_margin"
                android:layout_marginEnd="@dimen/layout_horizontal_margin"
                android:layout_marginRight="@dimen/layout_horizontal_margin"
                android:text="@string/cancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/roleRecyclerview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancelButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
