<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <im.vector.view.VectorCircularImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/roomTopicLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roomNameLayout"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roomNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:textColorHint="?attr/vctr_default_text_hint_color"
        app:layout_constraintLeft_toRightOf="@+id/avatar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/roomNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_name_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="?android:textColorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roomTopicLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:textColorHint="?attr/vctr_default_text_hint_color"
        app:layout_constraintLeft_toRightOf="@+id/avatar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/roomTopicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_topic_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="?android:textColorPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/publicSwitch"
        android:text="@string/public_room_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/roomTopicLayout" />

    <TextView
        android:id="@+id/header"
        style="@style/ListHeader"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/publicSwitch"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedUserRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_background"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/header" />
</androidx.constraintlayout.widget.ConstraintLayout>