<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/nonPatientMediaButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_material_camera"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/warningMessageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/layout_vertical_margin_half"
                android:text="@string/patient_tag_message_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/warningMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/layout_vertical_margin_half"
                android:paddingRight="@dimen/layout_vertical_margin_half"
                android:text="@string/patient_tag_message"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/warningMessageTitle" />

            <include
                android:id="@+id/selectedPatient"
                layout="@layout/item_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_horizontal_margin_half"
                android:layout_marginRight="@dimen/layout_horizontal_margin_half"
                app:layout_constraintTop_toBottomOf="@+id/warningMessage" />

            <ImageView
                android:id="@+id/cross"
                android:elevation="1dp"
                android:clickable="true"
                android:visibility="visible"
                android:tint="@color/act_gradient_color2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="@dimen/layout_horizontal_margin_half"
                android:src="@drawable/ic_material_leave"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/selectedPatient"
                android:focusable="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_horizontal_margin_half"
                android:hint="@string/search_patient"
                android:textColorHint="?attr/vctr_default_text_hint_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedPatient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/patientsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_horizontal_margin_half"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/nonPatientMediaButton"
        style="@style/VectorButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_horizontal_margin_half"
        android:text="@string/non_patient_media_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>